--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.towncrier]
-# Read https://github.com/ethereum/eth-account/newsfragments/README.md for instructions
-package = "eth_account"
+# Read https://github.com/platonnetwork/platon-account/newsfragments/README.md for instructions
+package = "platon_account"
 filename = "docs/release_notes.rst"
 directory = "newsfragments"
 underlines = ["-", "~", "^"]
-title_format = "eth-account v{version} ({project_date})"
-issue_format = "`#{issue} <https://github.com/ethereum/eth-account/issues/{issue}>`__"
+title_format = "platon-account v{version} ({project_date})"
+issue_format = "`#{issue} <https://github.com/platonnetwork/platon-account/issues/{issue}>`__"
 
 [[tool.towncrier.type]]
 directory = "feature"
@@ -34,7 +34,7 @@ showcontent = true
 
 [[tool.towncrier.type]]
 directory = "internal"
-name = "Internal Changes - for eth-account Contributors"
+name = "Internal Changes - for platon-account Contributors"
 showcontent = true
 
 [[tool.towncrier.type]]
